--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a dictionary of pokemon made in React, Webpack and Poke-API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "build": "webpack --config webpack.config.prod.js",
     "start": "webpack serve --config webpack.config.dev.js"
   },
@@ -13,7 +13,8 @@
     "HTML",
     "CSS",
     "React",
-    "Webpack"
+    "Webpack",
+    "Jest"
   ],
   "author": "Diego Fernando Rojas Quintero <diegorojas431@gmail.com>",
   "license": "MIT",
@@ -22,14 +23,22 @@
     "@babel/plugin-transform-runtime": "7.16.10",
     "@babel/preset-env": "7.16.11",
     "@babel/preset-react": "7.16.7",
+    "@testing-library/jest-dom": "5.16.3",
+    "@testing-library/react": "12.1.4",
+    "@testing-library/react-hooks": "7.0.2",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.7",
     "babel-loader": "8.2.3",
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "6.5.1",
     "css-minimizer-webpack-plugin": "3.4.1",
     "dotenv-webpack": "7.0.3",
+    "enzyme": "3.11.0",
+    "enzyme-to-json": "3.6.2",
     "file-loader": "6.2.0",
     "html-loader": "3.1.0",
     "html-webpack-plugin": "5.5.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "27.5.1",
     "mini-css-extract-plugin": "2.5.3",
     "mini-svg-data-uri": "1.4.3",
     "terser-webpack-plugin": "5.3.0",
@@ -41,7 +50,14 @@
   },
   "dependencies": {
     "@babel/runtime": "7.16.7",
+    "jest-localstorage-mock": "2.4.19",
     "react": "17.0.2",
     "react-dom": "17.0.2"
+  },
+  "jest": {
+    "verbose": true,
+    "setupFilesAfterEnv": [
+      "<rootDir>src/__test__/setupTests.js"
+    ]
   }
 }
